fix: correct hasJoined URL redirect and GameProfile handling for Velocity 3.x
- SessionServerUrlOverrider: use InitialLoginSessionHandler (correct Velocity 3.x class),
  preserve ?username=%s&serverId=%s format string in targetUrl so Velocity's String.format
  call produces a valid URL, remove broken velocity.mojangSessionServerUrl system property
  approach, add Unsafe usage explanation comment
- GameProfileListener: skip redundant profile endpoint call when hasJoined already returned
  textures (normal case with working redirect); only call profile endpoint as fallback,
  fix whitespace alignment
- CustomAuthPlugin: fix JVM parameter instructions to use correct mojang.sessionserver property
- ModConfig: add sensible default URL and javadoc

Agent-Logs-Url: https://github.com/wifi-left/mc-multilogin-compat-velocity/sessions/6b711618-7570-4b8c-ac38-dca4dec6dfce

Co-authored-by: wifi-left <63381531+wifi-left@users.noreply.github.com>